--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "test": "flow ./src"
   },
+  "homepage": "https://github.com/callstack-io/react-native-fbads",
   "author": "Mike Grabowski <grabbou@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
@@ -30,7 +31,8 @@
     "react-native": "^0.40.0"
   },
   "dependencies": {
-    "eventemitter3": "^2.0.2"
+    "eventemitter3": "^2.0.2",
+    "react-native-fbsdk": "^0.7.0"
   },
   "rnpm": {
     "android": {
